--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,36 +1,59 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
+title: Scottish DevTools
+description: Your hands-on hub for developer tooling in Scotland.
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: Build better. Share smarter. Dev together.
   image:
-    file: ../../assets/houston.webp
-  actions:
-    - text: Example Guide
-      link: /guides/example/
-      icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
-      icon: external
-      variant: minimal
+    alt: The DevTools Cog
+    file: ../../assets/cog2.png
 ---
 
-import { Card, CardGrid } from '@astrojs/starlight/components';
 
-## Next steps
+<div class="meetup-callout">
 
-<CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
-	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
-	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
-	</Card>
+## Next Meetup: Monday 14th October @ CodeBase Edinburgh
+
+Join us for the **first ever** Scottish DevTools meetup! We’re kicking off with a night of code, conversation, and community.
+
+🗓️ **When:** Monday 14th October, 6:30–9:00pm  
+📍 **Where:** CodeBase, Edinburgh
+
+What’s happening:
+- A talk on **PGVector + Supabase** for fuzzy book search
+- Live coding walkthroughs
+- Q&A, pizza, and plenty of chat
+
+Whether you’re a seasoned DevOps engineer or a frontend tinkerer, this is for you. Bring your laptop (optional), your questions, and your curiosity!
+
+</div>
+
+
+import { LinkCard, CardGrid } from '@astrojs/starlight/components';
+
+<CardGrid >
+  <LinkCard 
+  	title="What is DevTools Scotland?" 
+	href="/testpagessite/intro/what-is-devtools/" 
+	description="Learn what we’re building and why community-led DevTools matter."
+	>
+  </LinkCard>
+  <LinkCard 
+  	title="Meet the Team" 
+	href="/testpagessite/team/cameron-blackwood/"
+	description="Get to know Alan and Cameron, the organisers behind the scenes."
+	>
+  </LinkCard>
+  <LinkCard 
+  	title="Workshop Archive" 
+	href="/testpagessite/workshops/fuzzy-books/"
+	description="Explore past meetups, workshops, and hands-on resources."
+	>
+  </LinkCard>
+  <LinkCard 
+  	title="Contribute"
+	href="/testpagessite/workshops/fuzzy-books/"
+	description="Help us grow the library — guides, tips, demos and all."
+	>
+  </LinkCard>
 </CardGrid>
